--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </head>
     <body>
         <canvas></canvas>
-        <div class="controls"></div>
+        <div class="controls">
+            <p><a href="edit.html">Plan route</a></p>
+        </div>
     </body>
 </html>
