Use local storage

--- a/edit.html
+++ b/edit.html
@@ -11,7 +11,10 @@
             <g transform="translate(50, 200)"/>
         </svg>
         <div class="controls">
-            <p><button type="button">+++</button></p>
+            <p>
+                <button type="button">+++</button>
+                <a href="index.html">Drive</a>
+            </p>
         </div>
     </body>
 </html>
